# app/Http/Controllers/OtpController.php
@@ -2,58 +2,24 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Requests\CheckOtpRequest;
-use App\Models\Otp;
-use Illuminate\Database\Eloquent\Builder;
-use Illuminate\Support\Facades\Hash;
+use Abdukhaligov\LaravelOTP\OtpFacade as Otp;
+use App\Http\Requests\GenerateOtpRequest;
+use App\Http\Requests\ValidateOtpRequest;
 use NotificationChannels\Telegram\Telegram;
 use OpenApi\Annotations as OA;
 
 class OtpController extends Controller
 {
   /**
-   * @OA\Get(
-   *   path="/otp",
-   *   summary="Send OTP",
-   *   operationId="sendOtp",
+   * @OA\Post(
+   *   path="/otp/generate",
+   *   summary="Generate OTP",
+   *   operationId="generateOtp",
    *   tags={"OTP"},
-   *   security={{"auth.server": {}}},
-   *   @OA\Response(
-   *     response="200",
-   *     description="ok",
-   *   )
-   * )
-   */
-  public function sendOtp()
-  {
-    /** @var Otp|Builder $factoryOtp */
-    $factoryOtp = Otp::factory()->make();
-
-    app(Telegram::class)->sendMessage([
-      'chat_id' => '-1001713564048',
-      'text' => 'OTP: ' . $factoryOtp->clear_code
-    ]);
-
-    /** @var Otp|Builder $otp */
-    $otp = $factoryOtp->create(array_merge(['code' => $factoryOtp->clear_code], $factoryOtp->attributesToArray()));
-
-    return response()->json([
-      'message' => 'OTP created successfully',
-      'id' => $otp->id,
-    ]);
-  }
-
-  /**
-   * @OA\Post (
-   *   path="/otp",
-   *   summary="Check OTP",
-   *   operationId="checkOtp",
-   *   tags={"OTP"},
-   *   security={{"auth.server": {}}},
    *   @OA\RequestBody(
    *     required=true,
    *     @OA\JsonContent(
-   *       example={"code":"A1B2C3", "id":"1815ce18-0b4c-4d5f-ac73-a3b4aba36553"}
+   *       example={"identifier": "service1-test@gmail.com", "digits": 6, "validity": 10}
    *      )
    *   ),
    *   @OA\Response(
@@ -62,22 +28,51 @@ class OtpController extends Controller
    *   )
    * )
    */
-  public function checkOtp(CheckOtpRequest $request)
+  public function generateOtp(GenerateOtpRequest $request)
   {
-    /** @var Otp|Builder $otp */
-    $otp = Otp::query()
-      ->where('active', true)
-      ->findOrFail($request->id);
+    $identifier = $request->input('identifier');
+    $digits = $request->input('digits');
+    $validity = $request->input('validity');
 
-    if (!Hash::check($request->code, $otp->code)) {
-      return response()->json(['message' => 'OTP is invalid']);
+    $token = Otp::generate($identifier, $digits, $validity);
+
+    app(Telegram::class)->sendMessage([
+      'chat_id' => '-1001713564048',
+      'text' => 'OTP: ' . $token
+    ]);
+
+    return response()->json(['message' => 'OTP created successfully']);
+  }
+
+  /**
+   * @OA\Post(
+   *   path="/otp/validate",
+   *   summary="Validate OTP",
+   *   operationId="validatgeOtp",
+   *   tags={"OTP"},
+   *   @OA\RequestBody(
+   *     required=true,
+   *     @OA\JsonContent(
+   *       example={"identifier": "service1-test@gmail.com", "token": "123456"}
+   *      )
+   *   ),
+   *   @OA\Response(
+   *     response="200",
+   *     description="ok",
+   *   )
+   * )
+   */
+  public function validateOtp(ValidateOtpRequest $request)
+  {
+    $identifier = $request->input('identifier');
+    $token = $request->input('token');
+
+    $valid = Otp::validate($identifier, $token);
+
+    if (!$valid) {
+      return response()->json(['message' => 'OTP is invalid'], 400);
     }
 
-    $otp->active = false;
-    $otp->save();
-
-    return response()->json([
-      'message' => 'OTP validation success'
-    ]);
+    return response()->json(['message' => 'OTP validated successfully']);
   }
 }
